oop-four-pillars/force-app/main/default/objects/Certification_Element__c/Certification_Element__c.object-meta.xml
<CustomObject>
    <description>Used to track a component of a certification.</description>
    <label>Certification Element</label>
    <nameField>
        <label>Certification Element Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Certification Elements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>