oop-four-pillars/force-app/main/default/objects/Certification_Element__c/fields/Certification__c.field-meta.xml
<CustomField>
    <fullName>Certification__c</fullName>
    <description>Certification for this element.</description>
    <label>Certification</label>
    <referenceTo>Certification__c</referenceTo>
    <relationshipLabel>Certification Elements</relationshipLabel>
    <relationshipName>Certification_Elements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>